--- a/index-2.html
+++ b/index-2.html
@@ -26,11 +26,8 @@
     <div class="app-container">
         <!-- Shot Map Section -->
         <section class="shot-map-section">
-            <h2>Shot Map</h2>
-
-            <!-- Jersey Row with Controls -->
-            <div class="jersey-controls">
-                <div id="jersey-row" class="jersey-row"></div>
+            <div class="section-header">
+                <h2>Shot Map</h2>
                 <div class="control-buttons">
                     <button id="undo-btn" class="icon-btn" title="Undo">
                         <i data-lucide="undo"></i>
@@ -50,9 +47,22 @@
                 </div>
             </div>
 
+            <!-- Jersey Row -->
+            <div id="jersey-row" class="jersey-row"></div>
+
             <!-- Stat Row (Fouls + Stats + Actions) -->
             <div id="stat-row" class="stat-row">
                 <p>Select a player to begin</p>
+            </div>
+
+            <!-- Draw Row (hidden by default) -->
+            <div id="draw-row" class="draw-row" style="display: none;">
+                <div class="draw-text" id="draw-text"></div>
+                <div class="draw-buttons">
+                    <button id="redraw-btn" class="btn-secondary">Redraw</button>
+                    <button id="done-btn" class="btn-primary">Done</button>
+                    <button id="cancel-btn" class="btn-secondary">Cancel</button>
+                </div>
             </div>
 
             <!-- Court Canvas -->
@@ -64,6 +74,7 @@
         <!-- Action Log Section -->
         <section class="action-log-section">
             <h2>Action Log</h2>
+            <p class="help-text">Click on action to make change if needed</p>
             <div id="action-log" class="action-log"></div>
         </section>
 
@@ -73,9 +84,23 @@
             <div id="summary-table" class="summary-table"></div>
         </section>
 
-        <!-- Quick Actions -->
-        <div class="quick-actions">
-            <button id="new-game-btn" class="btn-primary">New Game</button>
+        <!-- Game Management -->
+        <div class="game-management">
+            <button id="history-btn" class="btn-secondary">
+                <i data-lucide="history"></i> History
+            </button>
+            <button id="export-btn" class="btn-secondary">
+                <i data-lucide="download"></i> Export
+            </button>
+            <button id="import-btn" class="btn-secondary">
+                <i data-lucide="upload"></i> Import
+            </button>
+            <button id="clear-game-btn" class="btn-danger">
+                <i data-lucide="eraser"></i> Clear Game
+            </button>
+            <button id="new-game-btn" class="btn-primary">
+                <i data-lucide="plus-circle"></i> New Game
+            </button>
         </div>
     </div>
 
