--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
             <button id="export-btn" class="btn-secondary">
                 <i data-lucide="download"></i> Export
             </button>
+            <button id="share-btn" class="btn-secondary">
+                <i data-lucide="share-2"></i> Share PDF
+            </button>
             <button id="import-btn" class="btn-secondary">
                 <i data-lucide="upload"></i> Import
             </button>
@@ -145,5 +148,12 @@
     <script>
         lucide.createIcons();
     </script>
+
+    <!-- PDF Export Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+    <!-- PDF Export Module -->
+    <script src="js/utils/pdfExport.js"></script>
 </body>
 </html>
