adding hot buttons

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <script src="js/ui/settingsUI.js"></script>
     <script src="js/ui/gameHistoryUI.js"></script>
     <script src="js/ui/actionCorrectionUI.js"></script>
+    <script src="js/ui/hotButtonsUI.js"></script>
     <script src="js/ui/helpUI.js"></script>
     <script src="js/ui/ui.js"></script>
 
