--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <p>Select a player to begin</p>
             </div>
 
-            <!-- Guide Text (above court, hidden by default) -->
-            <div id="guide-text" class="guide-text" style="display: none;"></div>
+            <!-- Guide Text (above court, hidden by default but space reserved) -->
+            <div id="guide-text" class="guide-text hidden"></div>
 
             <!-- Court Canvas -->
             <div class="court-container">
